# mlox

./: .gitignore  License.txt  MANIFEST.in  Makefile  Pipfile  README.md  Readme  TODO  mlox.py  mlox.spec  pyproject.toml  setup.py
Documentation/: Building.md  Changelog.md  Editing Guidelines.md  Perl on Windows.md  Rule Guidelines.md  ToDo.md  Using mlox.md  mlox History.md  mlox_guts.txt
Resources/: window.qml
data/: Readme  Rule Guidelines.md  arcname  mlox_base.txt  nodes.json  stats.sh
downloads/: mlox-0.59.7z  mlox-0.60.7z  mlox-data.7z
mlox/: Readme.md  Using mlox.md  __main__.py  app.py  configHandler.py  fileFinder.py  lo.bat  loadOrder.py  locheck.bat  lofix.bat  mlox.bat  mlox.msg  mlox.py  mlox_guts.txt  mlox_readme.txt  mlox_rules_guide.txt  pluggraph.py  qtGui.py  resources.py  ruleParser.py  translations.py  update.py  version.py
mlox/Documentation/: example_usage.txt  (+1 more)
temp/: Readme
test/: .prog  README  checkusers  checkusers.out  cleanup  loadorder2files.py  mlox.msg  mlox_base.txt  module_test.py  runall  scrambledates  sildra.txt  test0.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  testa.sh  testb.sh  testc.sh
util/: Readme.md  dumpcell  dumpcell00  dumpcells  dumpgmsts  dumpnames  esplint  esplint.bat  esplint_readme.txt  esprenamerec  expdep  get_current_load_order.bat  lo  loadorder2files.py  masters  runtes3lint  scramble_plugins.py  tes3cmd  tes3header  tes3lint  tes3lint sample output.md  tes3lint.bat  tes3lint_readme.md  tes3lint_readme.txt  tes3lintfull.bat  tes3linthelp.bat
(+474 files in other folders)
