[tool.poetry]
name = "mlox"
version = "1.0.3"
description = "A tool for analyzing and sorting your Morrowind plugin load order."
authors = ["Arthur Moore"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.4.4"
appdirs = "^1.4.4"
PyQt5 = "^5.15.2"
py7zr = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
